[package]
name = "solana-escrow-payment"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "~1.9.5"
thiserror = "~1.0"
arrayref = "0.3.6"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
